--- a/stepmania/src/StepMania.vcproj
+++ b/stepmania/src/StepMania.vcproj
@@ -2193,6 +2193,12 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 				RelativePath="crypto\CryptBn.h">
 			</File>
 			<File
+				RelativePath="CryptHelpers.cpp">
+			</File>
+			<File
+				RelativePath="CryptHelpers.h">
+			</File>
+			<File
 				RelativePath="crypto\CryptMD5.cpp">
 			</File>
 			<File
@@ -2231,6 +2237,175 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 			<File
 				RelativePath="crypto\CryptSHA.h">
 			</File>
+			<Filter
+				Name="crypto++"
+				Filter="">
+				<File
+					RelativePath="crypto51\algebra.cpp">
+				</File>
+				<File
+					RelativePath="crypto51\algebra.h">
+				</File>
+				<File
+					RelativePath="crypto51\algparam.cpp">
+				</File>
+				<File
+					RelativePath="crypto51\algparam.h">
+				</File>
+				<File
+					RelativePath="crypto51\argnames.h">
+				</File>
+				<File
+					RelativePath="crypto51\asn.cpp">
+				</File>
+				<File
+					RelativePath="crypto51\asn.h">
+				</File>
+				<File
+					RelativePath="crypto51\config.h">
+				</File>
+				<File
+					RelativePath="crypto51\cryptlib.cpp">
+				</File>
+				<File
+					RelativePath="crypto51\cryptlib.h">
+				</File>
+				<File
+					RelativePath="crypto51\files.cpp">
+				</File>
+				<File
+					RelativePath="crypto51\files.h">
+				</File>
+				<File
+					RelativePath="crypto51\filters.cpp">
+				</File>
+				<File
+					RelativePath="crypto51\filters.h">
+				</File>
+				<File
+					RelativePath="crypto51\fltrimpl.h">
+				</File>
+				<File
+					RelativePath="crypto51\integer.cpp">
+				</File>
+				<File
+					RelativePath="crypto51\integer.h">
+				</File>
+				<File
+					RelativePath="crypto51\iterhash.cpp">
+				</File>
+				<File
+					RelativePath="crypto51\iterhash.h">
+				</File>
+				<File
+					RelativePath="crypto51\mdc.h">
+				</File>
+				<File
+					RelativePath="crypto51\misc.cpp">
+				</File>
+				<File
+					RelativePath="crypto51\misc.h">
+				</File>
+				<File
+					RelativePath="crypto51\modarith.h">
+				</File>
+				<File
+					RelativePath="crypto51\modes.cpp">
+				</File>
+				<File
+					RelativePath="crypto51\modes.h">
+				</File>
+				<File
+					RelativePath="crypto51\mqueue.cpp">
+				</File>
+				<File
+					RelativePath="crypto51\mqueue.h">
+				</File>
+				<File
+					RelativePath="crypto51\nbtheory.cpp">
+				</File>
+				<File
+					RelativePath="crypto51\nbtheory.h">
+				</File>
+				<File
+					RelativePath="crypto51\oaep.cpp">
+				</File>
+				<File
+					RelativePath="crypto51\oaep.h">
+				</File>
+				<File
+					RelativePath="crypto51\oids.h">
+				</File>
+				<File
+					RelativePath="crypto51\osrng.cpp">
+				</File>
+				<File
+					RelativePath="crypto51\osrng.h">
+				</File>
+				<File
+					RelativePath="crypto51\pch.h">
+				</File>
+				<File
+					RelativePath="crypto51\pkcspad.cpp">
+				</File>
+				<File
+					RelativePath="crypto51\pkcspad.h">
+				</File>
+				<File
+					RelativePath="crypto51\pubkey.cpp">
+				</File>
+				<File
+					RelativePath="crypto51\pubkey.h">
+				</File>
+				<File
+					RelativePath="crypto51\queue.cpp">
+				</File>
+				<File
+					RelativePath="crypto51\queue.h">
+				</File>
+				<File
+					RelativePath="crypto51\randpool.cpp">
+				</File>
+				<File
+					RelativePath="crypto51\randpool.h">
+				</File>
+				<File
+					RelativePath="crypto51\rng.h">
+				</File>
+				<File
+					RelativePath="crypto51\rsa.cpp">
+				</File>
+				<File
+					RelativePath="crypto51\rsa.h">
+				</File>
+				<File
+					RelativePath="crypto51\secblock.h">
+				</File>
+				<File
+					RelativePath="crypto51\seckey.h">
+				</File>
+				<File
+					RelativePath="crypto51\sha.cpp">
+				</File>
+				<File
+					RelativePath="crypto51\sha.h">
+				</File>
+				<File
+					RelativePath="crypto51\simple.h">
+				</File>
+				<File
+					RelativePath="crypto51\smartptr.h">
+				</File>
+				<File
+					RelativePath="crypto51\strciphr.cpp">
+				</File>
+				<File
+					RelativePath="crypto51\strciphr.h">
+				</File>
+				<File
+					RelativePath="crypto51\words.h">
+				</File>
+			</Filter>
 		</Filter>
 		<File
 			RelativePath="StepMania.xpm">
