--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3363,6 +3363,7 @@ Line2=conf,AttractSoundFrequency
 Line3=conf,SoundVolume
 
 [ScreenProfileOptions]
+Fallback=ScreenWithMenuElements
 Player1Profile=
 Player2Profile=
 CreateNew=
@@ -3373,22 +3374,6 @@ CardDirPlayer2=
 StyleIcon=0
 MemoryCardIcons=0
 TimerSeconds=0
-HeaderY=
-HeaderX=
-HeaderOnCommand=
-HeaderOffCommand=
-TimerY=
-TimerX=
-TimerOnCommand=
-TimerOffCommand=
-FooterY=
-FooterX=
-FooterOnCommand=
-FooterOffCommand=
-HelpY=
-HelpX=
-HelpOnCommand=
-HelpOffCommand=
 
 [ScreenUnlock]
 Fallback=ScreenAttract
