build crypto++ directly; partially fixed vpath builds

--- a/stepmania/src/Makefile.am
+++ b/stepmania/src/Makefile.am
@@ -18,9 +18,6 @@ AM_CXXFLAGS += $(X_CFLAGS)
 $(srcdir)/libresample/libresample.a:
 	cd $(srcdir)/libresample && autoconf && sh ./configure && make
 
-$(srcdir)/crypto51/libcryptopp.a:
-	cd $(srcdir)/crypto51 && make
-
 Screens = \
 Screen.cpp Screen.h ScreenAttract.cpp ScreenAttract.h ScreenAward.cpp ScreenAward.h \
 ScreenBookkeeping.cpp ScreenBookkeeping.h ScreenBranch.cpp ScreenBranch.h ScreenCaution.cpp ScreenCaution.h \
@@ -230,6 +227,17 @@ crypto/CryptPrime.cpp crypto/CryptPrime.h crypto/CryptRSA.cpp crypto/CryptRSA.h 
 crypto/CryptRand.cpp crypto/CryptRand.h crypto/CryptSH512.cpp crypto/CryptSH512.h \
 crypto/CryptSHA.cpp crypto/CryptSHA.h
 
+cryptopp = \
+crypto51/algebra.cpp crypto51/algebra.h crypto51/algparam.cpp crypto51/algparam.h crypto51/argnames.h \
+crypto51/asn.cpp crypto51/asn.h crypto51/config.h crypto51/cryptlib.cpp crypto51/cryptlib.h crypto51/files.cpp \
+crypto51/files.h crypto51/filters.cpp crypto51/filters.h crypto51/fltrimpl.h crypto51/integer.cpp crypto51/integer.h \
+crypto51/iterhash.cpp crypto51/iterhash.h crypto51/mdc.h crypto51/misc.cpp crypto51/misc.h crypto51/modarith.h \
+crypto51/modes.cpp crypto51/modes.h crypto51/mqueue.cpp crypto51/mqueue.h crypto51/nbtheory.cpp crypto51/nbtheory.h \
+crypto51/oaep.cpp crypto51/oaep.h crypto51/oids.h crypto51/osrng.cpp crypto51/osrng.h crypto51/pch.h crypto51/pkcspad.cpp \
+crypto51/pkcspad.h crypto51/pubkey.cpp crypto51/pubkey.h crypto51/queue.cpp crypto51/queue.h crypto51/randpool.cpp \
+crypto51/randpool.h crypto51/rng.h crypto51/rsa.cpp crypto51/rsa.h crypto51/secblock.h crypto51/seckey.h crypto51/sha.cpp \
+crypto51/sha.h crypto51/simple.h crypto51/smartptr.h crypto51/strciphr.cpp crypto51/strciphr.h crypto51/words.h
+
 main_SOURCES = $(Screens) \
 		$(DataStructures) \
 		$(FileTypes) \
@@ -241,7 +249,8 @@ main_SOURCES = $(Screens) \
 		$(Rage) \
 		$(Actors) \
 		$(GlobalSingletons) \
-		$(crypto)
+		$(crypto) \
+		$(cryptopp)
 
 main_LDADD = \
 		  $(AUDIO_LIBS) \
@@ -249,8 +258,7 @@ main_LDADD = \
 		  $(SDL_LIBS) \
 		  $(XLIBS) \
 		  -lSDL_image \
-		  $(srcdir)/libresample/libresample.a \
-		  $(srcdir)/crypto51/libcryptopp.a
+		  $(srcdir)/libresample/libresample.a
 
 stepmania_SOURCES = $(main_SOURCES)
 stepmania_LDADD = $(main_LDADD)
