--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -18,6 +18,7 @@ FirstRunInitialScreen=ScreenCompany
 InitialScreen=ScreenCompany
 WindowTitle=StepMania
 DefaultModifiers=
+DefaultCpuModifiers=
 JoinPauseSeconds=0.8
 DifficultiesToShow=beginner,easy,medium,hard,challenge
 
