more missing ProfileHtml metrics. (well, ok. one.)

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -4349,6 +4349,7 @@ ShowStepsTypeDance-solo=1
 ShowStepsTypePump-single=1
 ShowStepsTypePump-double=1
 ShowStepsTypePump-couple=1
+ShowStepsTypePara-single=1
 ShowStepsTypeEz2-single=1
 ShowStepsTypeEz2-real=1
 ShowStepsTypeLights-cabinet=0
