--- a/stepmania/src/StepMania.vcproj
+++ b/stepmania/src/StepMania.vcproj
@@ -206,6 +206,12 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 				RelativePath="ScreenCenterImage.h">
 			</File>
 			<File
+				RelativePath="ScreenClearMachineStats.cpp">
+			</File>
+			<File
+				RelativePath="ScreenClearMachineStats.h">
+			</File>
+			<File
 				RelativePath="ScreenCredits.cpp">
 			</File>
 			<File
