add new clear screens

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3799,7 +3799,7 @@ PrevScreen=ScreenTitleMenu
 # when using entries that change the screen; otherwise, the only way to
 # exit the screen when in arcade mode is "exit".
 
-LineNames=1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16
+LineNames=1,2,3,4,5,6,7,8,9,10,11,12,13,14,15
 OptionMenuFlags=together;forceallplayers;smnavigation
 # This NextScreen is only used for the "exit" choice.
 Line1=list,Appearance Options
@@ -3808,16 +3808,15 @@ Line3=list,Bookkeeping
 Line4=list,Center Image
 Line5=list,Coin Options
 Line6=list,Config Key/Joy Mappings
-Line7=list,Download Machine Stats
-Line8=list,Input Options
-Line9=list,Gameplay Options
-Line10=list,Graphic Options
-Line11=list,Machine Options
-Line12=list,Sound Options
-Line13=list,Profile Options
-Line14=list,Other Options
-Line15=list,Reload Songs/Courses
-Line16=list,Test Input
+Line7=list,Input Options
+Line8=list,Gameplay Options
+Line9=list,Graphic Options
+Line10=list,Machine Options
+Line11=list,Sound Options
+Line12=list,Profile Options
+Line13=list,Other Options
+Line14=list,Reload Songs/Courses
+Line15=list,Test Input
 
 [TextBanner]
 TitleX=-90
@@ -4234,6 +4233,9 @@ Background Options,1=screen,ScreenBackgroundOptions;name,BackgroundOptions
 Bookkeeping=1,together
 BookkeepingDefault=
 Bookkeeping,1=screen,ScreenBookkeeping;name,Bookkeeping
+Clear Bookkeeping Data=1,together
+Clear Bookkeeping DataDefault=
+Clear Bookkeeping Data,1=screen,ScreenClearBookkeepingData;name,ClearBookkeepingData
 Center Image=1,together
 Center ImageDefault=
 Center Image,1=screen,ScreenCenterImage;name,CenterImage
@@ -4246,6 +4248,9 @@ Config Key/Joy Mappings,1=screen,ScreenMapControllers;name,KeyJoyMappings
 Download Machine Stats=1,together
 Download Machine StatsDefault=
 Download Machine Stats,1=screen,ScreenDownloadMachineStats;name,DownloadMachineStats
+Clear Machine Stats=1,together
+Clear Machine StatsDefault=
+Clear Machine Stats,1=screen,ScreenClearMachineStats;name,ClearMachineStats
 Input Options=1,together
 Input OptionsDefault=
 Input Options,1=screen,ScreenInputOptions;name,InputOptions
@@ -4267,6 +4272,9 @@ Profile Options,1=screen,ScreenProfileOptions;name,ProfileOptions
 Reload Songs/Courses=1,together
 Reload Songs/CoursesDefault=
 Reload Songs/Courses,1=screen,ScreenReloadSongs;name,ReloadSongs
+Reset To Defaults=1,together
+Reset To DefaultsDefault=
+Reset To Defaults,1=screen,ScreenResetToDefaults;name,ResetToDefaults
 Test Input=1,together
 Test InputDefault=
 Test Input,1=screen,ScreenTestInput;name,TestInput
@@ -4369,6 +4377,15 @@ NoData=NO DATA
 EmptyName=STEP
 
 [ScreenDownloadMachineStats]
+NextScreen=ScreenOptionsMenu
+
+[ScreenClearMachineStats]
+NextScreen=ScreenOptionsMenu
+
+[ScreenResetToDefaults]
+NextScreen=ScreenOptionsMenu
+
+[ScreenClearBookkeepingData]
 NextScreen=ScreenOptionsMenu
 
 [ScreenSetTime]
