--- a/stepmania/src/Makefile.am
+++ b/stepmania/src/Makefile.am
@@ -203,7 +203,9 @@ RageSoundPosMap.cpp RageSoundPosMap.h RageSoundReader.h RageSoundReader_FileRead
 RageSoundReader_Preload.cpp RageSoundReader_Preload.h RageSoundReader_Resample.cpp RageSoundReader_Resample.h \
 RageSoundReader_Resample_Fast.cpp RageSoundReader_Resample_Fast.h \
 RageSoundReader_Resample_Good.cpp RageSoundReader_Resample_Good.h \
-RageSoundResampler.cpp RageSoundResampler.h RageSounds.cpp RageSounds.h RageTexture.cpp RageTexture.h \
+RageSoundResampler.cpp RageSoundResampler.h RageSounds.cpp RageSounds.h \
+RageSurface_Load.cpp RageSurface_Load.h RageSurface_Load_PNG.cpp RageSurface_Load_PNG.h \
+RageTexture.cpp RageTexture.h \
 RageTextureID.cpp RageTextureID.h RageTextureManager.cpp RageTextureManager.h RageThreads.cpp RageThreads.h \
 RageTimer.cpp RageTimer.h RageTypes.h RageUtil.cpp RageUtil.h RageUtil_CharConversions.cpp RageUtil_CharConversions.h \
 RageUtil_FileDB.cpp RageUtil_FileDB.h RageUtil_CircularBuffer.h
