RageSurface_Load_GIF

--- a/stepmania/src/StepMania.vcproj
+++ b/stepmania/src/StepMania.vcproj
@@ -1894,6 +1894,12 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 				RelativePath="RageSurface_Load.h">
 			</File>
 			<File
+				RelativePath="RageSurface_Load_GIF.cpp">
+			</File>
+			<File
+				RelativePath="RageSurface_Load_GIF.h">
+			</File>
+			<File
 				RelativePath="RageSurface_Load_PNG.cpp">
 			</File>
 			<File
