--- a/stepmania/src/StepMania.vcproj
+++ b/stepmania/src/StepMania.vcproj
@@ -1912,6 +1912,12 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 				RelativePath="RageSurface_Load_PNG.h">
 			</File>
 			<File
+				RelativePath="RageSurface_Load_XPM.cpp">
+			</File>
+			<File
+				RelativePath="RageSurface_Load_XPM.h">
+			</File>
+			<File
 				RelativePath=".\RageTexture.cpp">
 			</File>
 			<File
