Fix Gameplay Footer not showing up over arrows

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -1432,7 +1432,7 @@ ShowBPMDisplay=true
 BPMDisplayX=Center1Player() and (GAMESTATE:GetMasterPlayerNumber() == PLAYER_1 and THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX") or THEME:GetMetric(Var "LoadingScreen","PlayerP2OnePlayerOneSideX")) or SCREEN_CENTER_X
 # BPMDisplayX=(PREFSMAN:GetPreference("Center1Player") and GAMESTATE:GetNumPlayersEnabled() == 1) and (GAMESTATE:GetMasterPlayerNumber() == PLAYER_1 and THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX") or THEME:GetMetric(Var "LoadingScreen","PlayerP2OnePlayerOneSideX")) or SCREEN_CENTER_X
 BPMDisplayY=SCREEN_BOTTOM-16
-# BPMDisplayOnCommand=zoom,0.5;
+BPMDisplayOnCommand=draworder,101
 BPMDisplayOffCommand=bounceend,0.25;zoom,0
 #
 ShowStageDisplay=false
@@ -1444,7 +1444,7 @@ StageDisplayOffCommand=bounceend,0.25;zoom,0
 ShowScoreFrame=GetUserPrefB("GameplayFooter");
 ScoreFrameX=SCREEN_CENTER_X
 ScoreFrameY=SCREEN_BOTTOM+4
-ScoreFrameOnCommand=vertalign,bottom;zoomtowidth,SCREEN_WIDTH+4;diffuse,color("#ffd400");addy,80;sleep,2;decelerate,0.5;addy,-80;
+ScoreFrameOnCommand=draworder,100;vertalign,bottom;zoomtowidth,SCREEN_WIDTH+4;diffuse,color("#ffd400");addy,80;sleep,2;decelerate,0.5;addy,-80;
 ScoreFrameOffCommand=
 #
 LifeP1X=Center1Player() and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX")
@@ -1508,47 +1508,47 @@ DeltaSecondsP2OffCommand=
 ScoreP1X=Center1Player() and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX")
 # ScoreP1X=(PREFSMAN:GetPreference("Center1Player") and GAMESTATE:GetNumPlayersEnabled() == 1) and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX")
 ScoreP1Y=SCREEN_BOTTOM-28
-ScoreP1OnCommand=visible,GetUserPrefB("UserPrefGameplayShowScore");diffuse,PlayerColor(PLAYER_1);sleep,3+0.3;smooth,0.5;y,SCREEN_BOTTOM-50
+ScoreP1OnCommand=draworder,101;visible,GetUserPrefB("UserPrefGameplayShowScore");diffuse,PlayerColor(PLAYER_1);sleep,3+0.3;smooth,0.5;y,SCREEN_BOTTOM-50
 ScoreP1OffCommand=
 ScoreP2X=Center1Player() and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP2OnePlayerOneSideX")
 # ScoreP2X=(PREFSMAN:GetPreference("Center1Player") and GAMESTATE:GetNumPlayersEnabled() == 1) and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP2OnePlayerOneSideX")
 ScoreP2Y=SCREEN_BOTTOM-28
-ScoreP2OnCommand=visible,GetUserPrefB("UserPrefGameplayShowScore");diffuse,PlayerColor(PLAYER_2);sleep,3+0.3;smooth,0.5;y,SCREEN_BOTTOM-50
+ScoreP2OnCommand=draworder,101;visible,GetUserPrefB("UserPrefGameplayShowScore");diffuse,PlayerColor(PLAYER_2);sleep,3+0.3;smooth,0.5;y,SCREEN_BOTTOM-50
 ScoreP2OffCommand=
 #
 StepsDescriptionP1X=Center1Player() and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX")
 # StepsDescriptionP1X=(PREFSMAN:GetPreference("Center1Player") and GAMESTATE:GetNumPlayersEnabled() == 1) and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX")
 StepsDescriptionP1Y=SCREEN_CENTER_Y-24
-StepsDescriptionP1OnCommand=zoom,0.5;diffusealpha,0;addy,-10;smooth,0.3;diffusealpha,1;addy,10;sleep,3;smooth,0.5;addy,-10;diffusealpha,0
+StepsDescriptionP1OnCommand=draworder,101;zoom,0.5;diffusealpha,0;addy,-10;smooth,0.3;diffusealpha,1;addy,10;sleep,3;smooth,0.5;addy,-10;diffusealpha,0
 StepsDescriptionP1OffCommand=
 StepsDescriptionP2X=Center1Player() and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP2OnePlayerOneSideX")
 # StepsDescriptionP2X=(PREFSMAN:GetPreference("Center1Player") and GAMESTATE:GetNumPlayersEnabled() == 1) and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP2OnePlayerOneSideX")
 StepsDescriptionP2Y=SCREEN_CENTER_Y-24
-StepsDescriptionP2OnCommand=zoom,0.5;diffusealpha,0;addy,-10;smooth,0.3;diffusealpha,1;addy,10;sleep,3;smooth,0.5;addy,-10;diffusealpha,0
+StepsDescriptionP2OnCommand=draworder,101;zoom,0.5;diffusealpha,0;addy,-10;smooth,0.3;diffusealpha,1;addy,10;sleep,3;smooth,0.5;addy,-10;diffusealpha,0
 StepsDescriptionP2OffCommand=
 #
 PlayerOptionsP1X=Center1Player() and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX")
 # PlayerOptionsP1X=(PREFSMAN:GetPreference("Center1Player") and GAMESTATE:GetNumPlayersEnabled() == 1) and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX")
 PlayerOptionsP1Y=SCREEN_CENTER_Y+24
-PlayerOptionsP1OnCommand=vertalign,top;wrapwidthpixels,256*2;zoom,0.5;diffusealpha,0;addy,10;smooth,0.3;diffusealpha,1;addy,-10;sleep,3;smooth,0.5;addy,10;diffusealpha,0
+PlayerOptionsP1OnCommand=draworder,101;vertalign,top;wrapwidthpixels,256*2;zoom,0.5;diffusealpha,0;addy,10;smooth,0.3;diffusealpha,1;addy,-10;sleep,3;smooth,0.5;addy,10;diffusealpha,0
 PlayerOptionsP1OffCommand=
 PlayerOptionsP2X=Center1Player() and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP2OnePlayerOneSideX")
 # PlayerOptionsP2X=(PREFSMAN:GetPreference("Center1Player") and GAMESTATE:GetNumPlayersEnabled() == 1) and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP2OnePlayerOneSideX")
 PlayerOptionsP2Y=SCREEN_CENTER_Y+24
-PlayerOptionsP2OnCommand=vertalign,top;wrapwidthpixels,256*2;zoom,0.5;diffusealpha,0;addy,10;smooth,0.3;diffusealpha,1;addy,-10;sleep,3;smooth,0.5;addy,10;diffusealpha,0
+PlayerOptionsP2OnCommand=draworder,101;vertalign,top;wrapwidthpixels,256*2;zoom,0.5;diffusealpha,0;addy,10;smooth,0.3;diffusealpha,1;addy,-10;sleep,3;smooth,0.5;addy,10;diffusealpha,0
 PlayerOptionsP2OffCommand=
 #
 StepsDisplayP1X=Center1Player() and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX")
 # StepsDisplayP1X=(PREFSMAN:GetPreference("Center1Player") and GAMESTATE:GetNumPlayersEnabled() == 1) and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX")
 StepsDisplayP1Y=SCREEN_CENTER_Y
-StepsDisplayP1OnCommand=zoomy,0;linear,0.3;zoomy,1;sleep,3;queuecommand,( GetUserPrefB("UserPrefGameplayShowStepsDisplay") == true and "Show" or "Hide" );
+StepsDisplayP1OnCommand=draworder,101;zoomy,0;linear,0.3;zoomy,1;sleep,3;queuecommand,( GetUserPrefB("UserPrefGameplayShowStepsDisplay") == true and "Show" or "Hide" );
 StepsDisplayP1ShowCommand=smooth,0.5;y,SCREEN_BOTTOM-20;
 StepsDisplayP1HideCommand=linear,0.5;zoomy,0
 StepsDisplayP1OffCommand=
 StepsDisplayP2X=Center1Player() and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP2OnePlayerOneSideX")
 # StepsDisplayP2X=(PREFSMAN:GetPreference("Center1Player") and GAMESTATE:GetNumPlayersEnabled() == 1) and SCREEN_CENTER_X or THEME:GetMetric(Var "LoadingScreen","PlayerP2OnePlayerOneSideX")
 StepsDisplayP2Y=SCREEN_CENTER_Y
-StepsDisplayP2OnCommand=zoomy,0;linear,0.3;zoomy,1;sleep,3;queuecommand,( GetUserPrefB("UserPrefGameplayShowStepsDisplay") == true and "Show" or "Hide" );
+StepsDisplayP2OnCommand=draworder,101;zoomy,0;linear,0.3;zoomy,1;sleep,3;queuecommand,( GetUserPrefB("UserPrefGameplayShowStepsDisplay") == true and "Show" or "Hide" );
 StepsDisplayP2ShowCommand=smooth,0.5;y,SCREEN_BOTTOM-20;
 StepsDisplayP2HideCommand=linear,0.5;zoomy,0
 StepsDisplayP2OffCommand=
@@ -1556,7 +1556,7 @@ StepsDisplayP2OffCommand=
 SongOptionsX=Center1Player() and (GAMESTATE:GetMasterPlayerNumber() == PLAYER_1 and THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX") or THEME:GetMetric(Var "LoadingScreen","PlayerP2OnePlayerOneSideX")) or SCREEN_CENTER_X
 # SongOptionsX=(PREFSMAN:GetPreference("Center1Player") and GAMESTATE:GetNumPlayersEnabled() == 1) and (GAMESTATE:GetMasterPlayerNumber() == PLAYER_1 and THEME:GetMetric(Var "LoadingScreen","PlayerP1OnePlayerOneSideX") or THEME:GetMetric(Var "LoadingScreen","PlayerP2OnePlayerOneSideX")) or SCREEN_CENTER_X
 SongOptionsY=SCREEN_BOTTOM-32
-SongOptionsOnCommand=zoom,0.5
+SongOptionsOnCommand=draworder,101;zoom,0.5
 SongOptionsOffCommand=
 #
 OniGameOverP1X=
