[br:NetworkProtocol] add NetworkPacket

--- a/src/StepMania-net2008.vcproj
+++ b/src/StepMania-net2008.vcproj
@@ -8005,6 +8005,18 @@
 				</FileConfiguration>
 			</File>
 		</Filter>
+		<Filter
+			Name="Network"
+			>
+			<File
+				RelativePath=".\NetworkPacket.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\NetworkPacket.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath="archutils\Win32\DialogCrashHeader.bmp"
 			>
