get rid of command on StepsDisplay Autogen in fallback

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -1996,7 +1996,7 @@ ShowAutogen=true
 AutogenX=40
 AutogenY=0
 AutogenOnCommand=
-AutogenSetCommand=%function(self,param) if param.CustomDifficulty then self:diffuse(CustomDifficultyToLightColor(param.CustomDifficulty)); self:strokecolor(CustomDifficultyToDarkColor(param.CustomDifficulty)); end end
+AutogenSetCommand=
 ShowStepsType=false
 StepsTypeX=0
 StepsTypeY=0
