add Remove to ScreenEditOptions; fixes issue 242

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3615,13 +3615,14 @@ CancelTransitionsOut=true
 PlayMusic=false
 TimerSeconds=-1
 ShowStyleIcon=false
-LineNames="1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16"
+LineNames="1,2,3,4,5,6,R,7,8,9,10,11,12,13,14,15,16"
 Line1="list,Speed"
 Line2="list,Accel"
 Line3="list,Effect"
 Line4="list,Appearance"
 Line5="list,Turn"
 Line6="list,Insert"
+LineR="list,Remove"
 Line7="list,Scroll"
 Line8="list,NoteSkins"
 Line9="list,Holds"
