GamePref* -> UserPref* for the Lua functions; fixes bug 246

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -830,24 +830,24 @@ Fallback="ScreenOptionsServiceChild"
 NextScreen="ScreenOptionsExtended"
 PrevScreen="ScreenOptionsExtended"
 LineNames="gNotePos,gAuto,gScore,gSScore,gSDisp,gOpts,gLongFail,gComboUnderField,FlashyCombo,GameplayFooter"
-LinegNotePos="lua,GamePrefNotePosition()"
+LinegNotePos="lua,UserPrefNotePosition()"
 LinegScore="lua,UserPrefGameplayShowScore()"
 LinegSScore="lua,UserPrefSpecialScoringMode()"
 LinegSDisp="lua,UserPrefGameplayShowStepsDisplay()"
 LinegOpts="lua,UserPrefShowLotsaOptions()"
-LinegAuto="lua,GamePrefAutoSetStyle()"
+LinegAuto="lua,UserPrefAutoSetStyle()"
 LinegLongFail="lua,UserPrefLongFail()"
-LinegComboUnderField="lua,GamePrefComboUnderField()"
+LinegComboUnderField="lua,UserPrefComboUnderField()"
 LineFlashyCombo="lua,UserPrefFlashyCombo()"
 LineGameplayFooter="lua,UserPrefGameplayFooter()"
 [ScreenOptionsSystemDirection]
 LineNames="1,2,3,4,5,6,7,8,9,FlashyCombo,RollCombo,10,11,12,13,14,15,16,LF,17,18,19,20,21,22"
 LineLF="lua,UserPrefLongFail()"
-LineRollCombo="lua,GamePrefComboOnRolls()"
+LineRollCombo="lua,UserPrefComboOnRolls()"
 LineFlashyCombo="lua,UserPrefFlashyCombo()"
 [ScreenOptionsAdvanced]
 LineNames="2,3,4,8,11,13,14,15,16,28,29,30,RollCombo"
-LineRollCombo="lua,GamePrefComboOnRolls()"
+LineRollCombo="lua,UserPrefComboOnRolls()"
 [ScreenOptionsService]
 ShowHeader=false
 
