Add metrics for BPM and Song Length sorting.
Fixes request 173.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -843,6 +843,9 @@ ShowRoulette=true
 ShowRandom=false
 ShowPortal=false
 #
+SortBPMDivision=20
+SortLengthDivision=5
+#
 MostPlayedSongsToShow=30
 RecentSongsToShow=30
 #
