New branch from default: [metricClean]
Line up metrics from fallback and default for easier diffing.

The goal here is to address issue number 55 for version 1.2.5.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -233,6 +233,11 @@ FormatString="%03.0f"
 
 [CodeDetector]
 # Codes on the MusicWheel that change stuff!
+# For Future Reference:
+# @ = Holding
+# - = In Conjuction With / Then
+# ~ = Released
+# + = At The Same Time
 PrevSteps1="Up,Up"
 PrevSteps2="MenuUp,MenuUp"
 NextSteps1="Down,Down"
@@ -585,6 +590,7 @@ StreamX=0
 StreamY=0
 OverX=0
 OverY=0
+
 [LifeMeterBattery]
 # The bar that shows up in Oni mode.
 
@@ -1101,7 +1107,6 @@ TextOffCommand=
 
 [ScoreDisplayOni]
 
-
 [ScoreDisplayLifeTime]
 FrameX=
 FrameY=
@@ -1251,6 +1256,7 @@ SoundProperty="Pitch"
 PropertyMin=7/8
 PropertyCenter=1.0
 PropertyMax=9/8
+
 [StepsDisplayListRow]
 FrameX=0
 FrameY=0
@@ -1834,6 +1840,7 @@ PerChoiceIconElement=false
 ShowScroller=true
 WrapScroller=true
 ShowIcon=false
+
 [ScreenGameInformation]
 Class="ScreenSelectMaster"
 Fallback="ScreenSelectMaster"
@@ -1958,13 +1965,13 @@ ScreenModsCommand=setupcoursestagemods
 #
 MusicWheelType="CourseWheel"
 Codes="CourseCodeDetector"
+
 [CourseCodeDetector]
 Fallback="CodeDetector"
 NextSort1=
 NextSort2=
 NextSort3=
 NextSort4=
-
 
 [StepsDisplay]
 FrameX=0
@@ -2519,6 +2526,7 @@ ExplanationTogetherOffCommand=
 
 [ScreenOptionsServiceExtendedChild]
 Fallback="ScreenOptionsServiceChild"
+
 [ScreenMiniMenu]
 Class="ScreenMiniMenu"
 Fallback="ScreenOptions"
@@ -3342,11 +3350,13 @@ NextScreen=Branch.AfterProfileSave()
 PrevScreen=Branch.TitleMenu()
 #
 TimerSeconds=-1
+
 [ScreenProfileSaveSummary]
 Fallback="ScreenProfileSave"
 #
 NextScreen="ScreenGameOver"
 PrevScreen="ScreenGameOver"
+
 [ScreenGameOver]
 Class="ScreenEnding"
 Fallback="ScreenAttract"
@@ -4114,6 +4124,7 @@ ChoiceNames="1"
 IdleCommentSeconds=-1
 IdleTimeoutSeconds=-1
 IdleTimeoutScreen=Branch.AfterInit()
+
 [ScreenDemonstration]
 Fallback="ScreenGameplay"
 Class="ScreenDemonstration"
