[metricClean] Add other blanks, fix MusicWheel.

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -237,6 +237,7 @@ LockedInitialVelocity=7
 ;		self:z( -100 + WHEEL_3D_RADIUS * math.cos(rotationx_radians) ); \
 ;		self:rotationx( rotationx_radians * 180/math.pi );	--[[ to degrees end]] \
 ;	end;
+ItemTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) self:x( (1-math.cos(offsetFromCenter/math.pi))*44 ); self:y( offsetFromCenter*46 ); end
 MusicWheelSortOnCommand=fov,90;
 MusicWheelSortOffCommand=fov,90;
 MusicWheelItemSortOnCommand=zoomy,0;bounceend,0.15;zoomy,1
@@ -268,7 +269,10 @@ SortMenuColor=Color("Orange")
 #~ ChoiceLength="sort,Length"
 #~ ChoiceCourses="sort,AllCourses;"
 UseEasyMarkerFlag=true
-#
+
+[CourseWheel]
+
+[OnlineMusicWheel]
 
 [MusicWheelItem]
 WheelNotifyIconX=-128-16+0.5
