[metricClean] cleanup and diff matching.
So far, nothing obvious is broken here.

--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -4,9 +4,6 @@ FallbackTheme=_fallback
 
 [Common]
 FirstAttractScreen=""
-InitialScreen="ScreenInit"
-
-# AutoSetStyle=GetUserPrefB("UserPrefAutoSetStyle")
 
 # 02 #
 [LightsManager]
@@ -26,8 +23,6 @@ SongGroupColor9=BoostColor(Color("Orange"),1.25)
 SongGroupColor10=BoostColor(Color("Orange"),1.25)
 
 CourseGroupColor1=color("1,1,1,1")
-UnlockColor=color("1,0.5,0,1")
-ExtraColor=color("#ff0000")	-- red
 
 [UnlockManager]
 
@@ -48,11 +43,7 @@ SetNormalCommand=stoptweening;maxwidth,128;linear,0.2;diffuse,Color("White");dif
 SetChangeCommand=stoptweening;maxwidth,128;linear,0.2;diffuse,Color("Orange");diffusetopedge,BoostColor(Color("Orange"),1.5);
 SetRandomCommand=stoptweening;maxwidth,128;linear,0.2;diffuse,Color("Blue");diffusetopedge,BoostColor(Color("Blue"),1.5);
 SetExtraCommand=stoptweening;maxwidth,128;linear,0.2;diffuse,Color("Red");diffusebottomedge,BoostColor(Color("Red"),0.5);
-Cycle=true
-NoBpmText="000"
 RandomCycleSpeed=0.2		--  smaller numbers mean the bpm cycles faster
-Separator="-"
-ShowQMarksInRandomCycle=true
 
 [CodeDetector]
 # For Future Reference:
@@ -64,17 +55,13 @@ ShowQMarksInRandomCycle=true
 [CodeDetectorOnline]
 
 [CombinedLifeMeterTug]
-# We dont use it.
+# We don't use it.
 MeterWidth=512-8
 MeterHeight=40
 
 [Combo]
 ShowComboAt=2
 
-NumberMinZoom=0.8
-NumberMaxZoom=1
-NumberMaxZoomAt=100
-LabelMinZoom=0.75*0.75
 LabelMaxZoom=0.75*1
 
 PulseCommand=%function(self,param) self:finishtweening(); self:diffusealpha(1); self:zoom(1.125*param.Zoom); self:linear(0.05); self:zoom(param.Zoom); self:sleep(2); self:linear(0.5); self:diffusealpha(0); end;
@@ -83,33 +70,13 @@ NumberOnCommand=y,240-216-1.5;shadowlength,1;horizalign,right;vertalign,bottom;s
 LabelOnCommand=x,6;y,22.5;shadowlength,1;zoom,0.75;diffusebottomedge,color("0.75,0.75,0.75,1");horizalign,left;vertalign,bottom
 
 [HoldJudgment]
-# !!! #
-# HoldJudgmentLetGoCommand=HoldJudgmentLetGo()
-# HoldJudgmentHeldCommand=HoldJudgmentHeld()
 HoldJudgmentLetGoCommand=finishtweening;shadowlength,0;diffusealpha,1;zoom,1;y,-10;linear,0.8;y,10;sleep,0.5;linear,0.1;zoomy,0.5;zoomx,2;diffusealpha,0
 HoldJudgmentHeldCommand=finishtweening;shadowlength,0;diffusealpha,1;zoom,1.25;linear,0.3;zoomx,1;zoomy,1;sleep,0.5;linear,0.1;zoomy,0.5;zoomx,2;diffusealpha,0
-# HoldJudgmentLetGoCommand=GAMESTATE:GetCurrentGame():GetName() == "pump" and "visible,false" or "finishtweening;shadowlength,0;diffusealpha,1;zoom,1;y,-10;linear,0.8;y,10;sleep,0.5;linear,0.1;zoomy,0.5;zoomx,2;diffusealpha,0"; 
-# HoldJudgmentHeldCommand=GAMESTATE:GetCurrentGame():GetName() == "pump" and "visible,false" or "finishtweening;shadowlength,0;diffusealpha,1;zoom,1.25;linear,0.3;zoomx,1;zoomy,1;sleep,0.5;linear,0.1;zoomy,0.5;zoomx,2;diffusealpha,0";
-# HoldJudgmentLetGoCommand=function(self) \
-	# if GAMESTATE:GetCurrentGame():GetName() == "pump" then \
-		# return (cmd(visible,false))(self); \
-	# else return (cmd(finishtweening;shadowlength,0;diffusealpha,1;zoom,1;y,-10;linear,0.8;y,10;sleep,0.5;linear,0.1;zoomy,0.5;zoomx,2;diffusealpha,0))(self); \
-	# end; \
-# end;
-# HoldJudgmentHeldCommand=function(self) \
-	# if GAMESTATE:GetCurrentGame():GetName() == "pump" then \
-		# return (cmd(visible,false)); \
-	# else return (cmd(finishtweening;shadowlength,0;diffusealpha,1;zoom,1.25;linear,0.3;zoomx,1;zoomy,1;sleep,0.5;linear,0.1;zoomy,0.5;zoomx,2;diffusealpha,0))(self); \
-	# end; \
-# end;
 
 [HelpDisplay]
 TipShowTime=7
 
 [Judgment]
-# New #
-JudgmentOnCommand=
-# !!! #
 JudgmentW1Command=finishtweening;shadowlength,0;y,0;diffusealpha,1;zoom,1.3;linear,0.05;zoom,1;sleep,0.8;linear,0.1;zoomy,0.5;zoomx,2;diffusealpha,0;glowblink;effectperiod,0.05;effectcolor1,1,1,1,0;effectcolor2,1,1,1,0.8
 JudgmentW2Command=finishtweening;y,0;shadowlength,0;diffusealpha,1;zoom,1.3;linear,0.05;zoom,1;sleep,0.5;linear,0.1;zoomy,0.5;zoomx,2;diffusealpha,0
 JudgmentW3Command=finishtweening;y,0;shadowlength,0;diffusealpha,1;zoom,1.2;linear,0.05;zoom,1;sleep,0.5;linear,0.1;zoomy,0.5;zoomx,2;diffusealpha,0;
@@ -163,15 +130,11 @@ PointsHoldHeld=0
 PointsHoldLetGo=0
 
 [DifficultyList]
-CapitalizeDifficultyNames=false
-NumShownItems=8
 ItemsSpacingY=24
+NumShownItems=8
 
 [FadingBanner]
-BannerOnCommand=
 BannerFadeFromCachedCommand=diffusealpha,1;stoptweening;accelerate,0.05;glow,Colors.Alpha( Color("White"), 0.45 );decelerate,0.175;diffusealpha,0;glow,Color("Invisible");
-BannerFadeOffCommand=diffusealpha,1;stoptweening;linear,0.25;diffusealpha,0
-BannerResetFadeCommand=diffusealpha,1
 
 [Gameplay]
 
@@ -196,23 +159,16 @@ BatteryP1Y=0
 BatteryP2X=0
 BatteryP2Y=0
 #
-NumLivesP1X=-92
-NumLivesP1Y=0
-NumLivesP2X=92
-NumLivesP2Y=0
 NumLivesP2OnCommand=zoomx,-1
 
 [LifeMeterBattery Percent]
 # still asking for this even though it's in fallback... -aj
 Format=
 #
-DancePointsP2OnCommand=zoom,0.7;zoomx,-0.7;shadowlength,0;diffuse,PlayerColor(PLAYER_2)
-DancePointsP2OffCommand=
-#
-PercentP2X=0
-PercentP2Y=0
 PercentP2OnCommand=zoom,0.7;zoomx,-0.7;shadowlength,0;diffuse,PlayerColor(PLAYER_2)
-PercentP2OffCommand=
+DancePointsP2OnCommand=zoom,0.7;zoomx,-0.7;shadowlength,0;diffuse,PlayerColor(PLAYER_2)
+
+[LifeMeterTime]
 
 [LyricDisplay]
 
@@ -227,10 +183,8 @@ TitleLoseFocusCommand=diffuse,Color("White");strokecolor,Color("Black");stopeffe
 [OptionRowService]
 
 [OptionRowExit]
-Fallback="OptionRow"
 FrameOnCommand=visible,true;diffuse,Color("Red");
 FrameX=SCREEN_CENTER_X
-TitleOnCommand=visible,false
 
 ItemsMinBaseZoom=1
 ItemOnCommand=shadowlength,1;zoom,0.8;diffuse,Color("Red");diffusebottomedge,BoostColor(Color("Red"),0.75);shadowcolor,BoostColor(Color("Red"),0.35)
@@ -272,12 +226,8 @@ Text1OnCommand=stopeffect;stoptweening;shadowlength,0;strokecolor,Color("Outline
 Text1FormatFunction=function(fSeconds) \
 	return string.format("%0.1f", fSeconds); \
 end
-FrameOnCommand=
+
 Warning10Command=diffuseshift;effectperiod,1;effectcolor2,Color("Red");effectcolor1,color("0.5,0,0,1");
-#~ Warning10Command=%function(self) \
-	#~ MESSAGEMAN:Broadcast("TimerWarning"); \ 
-	#~ cmd(diffuseshift;effectperiod,1;effectcolor2,Color("Red");effectcolor1,color("0.5,0,0,1"))(self); \
-#~ end; 
 
 [MenuTimerNoSound]
 
